rust/tests/errors/unclosed_while.hyper
while count < 10:
    <span>{count}</span>
